--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "zarth/htmltables",
+    "name": "zarthwork/htmltables",
     "type": "typo3-cms-extension",
     "description": "This extension adds a new content type to create tables by IRRE/Inline",
     "homepage": "https://www.zarthwork.de",
