--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
 		"source": "https://github.com/zarthwork/htmltables"
 	},
 	"require": {
-		"typo3/cms-core": "^12.4.0"
+		"typo3/cms-core": ">=11.5.0 || >=12.4.0"
 	},
 	"autoload": {
 		"psr-4": {
